/*
 * Copyright 2016-present the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.center.auth;

import "api/common/r.proto";

// 配置相关
option java_package = "com.aiforest.tmmes.api.center.auth";
option java_outer_classname = "TokenProto";
option objc_class_prefix = "Auth";
option java_multiple_files = true;

// 接口类
service TokenApi {
  rpc checkTokenValid (LoginQuery) returns (RTokenDTO);
}

// checkTokenValid Query
message LoginQuery {
  string tenant = 1; // 租户
  string name = 2; // 登录名称
  string salt = 3; // 盐值
  string password = 4; // 登录密码
  string token = 5; // 令牌
}

// R of Token DTO
message RTokenDTO {
  api.common.RDTO result = 1; // 结果
  string data = 2; // 数据
}
